planteo de estetica del juego y otros cambios

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Juego</title>
+    <title>SpaceShot</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body style="background-color: rgb(3, 3, 29)";>
 
-    <script id="game-container" src="index.js" type= "module"></script>
 
+    <h1 id="titulo" style="color: aliceblue;">SpaceShot</h1>
+<header>
+    <script id= "game-container" src="index.js" type= "module"></script>
+</header>
+    <footer style="background-color: rgb(7, 2, 32);"> <p style="color: aliceblue; text-align: center;">Made by Nehemías Mosqueda © 2023</p> </footer>
 </body>
 </html>
