--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <title>SpaceShot</title>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+    <link rel="shortcut icon " type="image/x-icon" href="./assets/image/portada.png" />
+    
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
+    
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body style="background-color: rgb(3, 3, 29)";>
