agregado de musica y otros cambios

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SpaceShot</title>
+    <title>SpaceTrip</title>
     <link rel="shortcut icon " type="image/x-icon" href="./assets/image/portada.png" />
     
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
