--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>SpaceTrip</title>
-    <link rel="shortcut icon " type="image/x-icon" href="./assets/image/portada.png" />   
+    <link rel="shortcut icon " type="image/x-icon" href="./public/assets/image/portada.png" />   
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script> 
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
